# hhh-rust

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  todo.md
.claude/skills/: ui.md
.github/workflows/: build.yml
migrations/: 001_initial.sql
src/: config.rs  db.rs  error.rs  main.rs
src/auth/: middleware.rs  mod.rs  password.rs  session.rs
src/models/: booking.rs  class.rs  invite.rs  mod.rs  setting.rs  user.rs
src/routes/: account.rs  bookings.rs  classes.rs  dashboard.rs  mod.rs  public.rs
src/routes/admin/: mod.rs  settings.rs  stats.rs  users.rs
src/routes/employee/: classes.rs  invites.rs  members.rs  mod.rs
templates/: base.html
templates/account/: change_password.html  profile.html
templates/admin/: settings.html  stats.html  user_form.html  users.html
templates/auth/: login.html  register.html
templates/bookings/: _booking_row.html  my_bookings.html
templates/classes/: detail.html  schedule.html
templates/dashboard/: admin.html  employee.html  member.html
templates/employee/: class_form.html  classes.html  invites.html  members.html  rosters.html  schedule_form.html
templates/partials/: nav.html  sidebar.html
todo/: daisyui5-upgrade.md
