[package]
name = "hhh-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower-cookies = "0.11"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
